# python_studies

./: .gitignore
0_Python_Fundamentals_Garden_Data/: ft_count_harvest_iterative.py  ft_garden_name.py  ft_water_reminder.py
0_Python_Fundamentals_Garden_Data/Module_00/: ft_count_harvest_recursive.py  ft_harvest_total.py
0_Python_Fundamentals_Garden_Data/ex1/: ft_garden_name.py
0_Python_Fundamentals_Garden_Data/ex2/: ft_plot_area.py
0_Python_Fundamentals_Garden_Data/ex6/: ft_count_harvest_recursive.py
0_Python_Fundamentals_Garden_Data/ex7/: ft_seed_inventory.py
1_Object_Oriented_Garden_System/ex0/: ft_garden_intro.py
1_Object_Oriented_Garden_System/ex1/: ft_garden_data.py
1_Object_Oriented_Garden_System/ex2/: ft_plant_growth.py
1_Object_Oriented_Garden_System/ex3/: ft_plant_factory.py
1_Object_Oriented_Garden_System/ex4/: ft_garden_security.py
1_Object_Oriented_Garden_System/ex5/: ft_plant_types.py
1_Object_Oriented_Garden_System/ex6/: ft_garden_analytics.py
4_Digital_Preservation_Cyber_Archives/: new_fragment.txt
6_Mastering_Pythons_Import_Mysteries/: elements.py  ft_alembic_0.py  ft_alembic_1.py  ft_alembic_2.py  ft_alembic_3.py  ft_alembic_4.py  ft_alembic_5.py  ft_distillation_0.py  ft_distillation_1.py  ft_kaboom_0.py  ft_kaboom_1.py  ft_transmutation_0.py  ft_transmutation_1.py  ft_transmutation_2.py
7_Abstract_Card_Architecture/: battle.py  capacitor.py  tournament.py
8_Real_World_Data_Engineering/: .gitignore
8_Real_World_Data_Engineering/ex1/: loading.py  pyproject.toml  requirements.txt
(+45 files in other folders)
