[project]
name = "loading-programs"
version = "0.1.0"
description = "Generate random datapoints and use them to plot a graphic"
authors = [
    {name = "pedrohe3"}
]
requires-python = ">=3.10"

[tool.poetry.dependencies]
numpy = "^1.25.0"
pandas = "^2.1.0"
requests = "^2.31.0"
matplotlib = "^3.7.2"
python-dotenv = "^1.2.2"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
